	port driver.

	* src/exmpp_internals.erl: New module which provide low-level
	functions for port drivers handling.

	* src/exmpp_sup.erl: Supervisor who is responsible for
	exmpp_stringprep startup.

	* src/exmpp.erl, ebin/exmpp.app.in: This module uses the `application'
	behaviour now. It starts `exmpp_sup'.

	* src/exmpp_jid.erl: New module which provides functions to manipulate
	JIDs.

2007-02-06  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* c_src/uni_data.c, c_src/uni_norm.c, c_src/stringprep_uni_data.h,
	c_src/stringprep_uni_norm.h: Renamed as real headers.

	* c_src/stringprep_drv.c: Internal name of the driver changed to
	`exmpp_stringprep_erl'.

	* c_src/exmpp_stringprep_drv.c, c_src/exmpp_stringprep_drv.c,
	c_src/Makefile.am, src/stringprep.erl, priv/lib/Makefile.am: Prefixed
	`stringprep_drv' with `exmpp_' to avoid conflicts with ejabberd's own
	stringprep_drv. This permits exmpp to coexist with ejabberd.

2007-01-09  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* configure.ac: Next branch will be 0.7.

2007-01-09  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* configure.ac: Fixed the name of a variable.

2007-01-04  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* configure.ac: Head is now the future 0.6 branch. Dropped
	`EXMPP_BUILD_ID'. Debug is disabled by default when
	`EXMPP_RELEASE_DATE' is set and enabled otherwise. Comments translated
	in english.

	* include/exmpp.hrl: Add `jabber:iq:privacy', `jabber:iq:roster' and
	`urn:ietf:params:xml:ns:xmpp-session' namespaces.

	* doc/Makefile.am: Clean stylesheet.css if it was copied at compile
	time.

	* src/exmpp_factory.erl: Add functions to make common pubsub stanzas.

	* src/exmpp_jlib.erl: Add functions to convert #jid{} to string and
	the other way around. Style.

	* testsuite/test.sh: Fixed portability issues with sed(1) and head(1).

	* c_src/xmpp_ns.h.in, c_src/xmpp_attrs.h.in, c_src/xmpp_names.h.in: