@@ -1,9 +1,21 @@
 # $Id$
 
-EXTRA_DIST = exmpp.erl exmpp_xml.erl exmpp_xmlstream.erl\
-	     exmpp_factory.erl exmpp_jlib.erl\
-	     ejabberd_zlib.erl iconv.erl jlib.erl sha.erl stringprep.erl\
-	     tls.erl xml.erl
+EXTRA_DIST = exmpp.erl							\
+	     exmpp_sup.erl						\
+	     exmpp_internals.erl					\
+	     exmpp_xml.erl						\
+	     exmpp_xmlstream.erl					\
+	     exmpp_stringprep.erl					\
+	     exmpp_jid.erl						\
+	     exmpp_factory.erl						\
+	     exmpp_jlib.erl						\
+	     ejabberd_zlib.erl						\
+	     iconv.erl							\
+	     jlib.erl							\
+	     sha.erl							\
+	     stringprep.erl						\
+	     tls.erl							\
+	     xml.erl
 
 all-local:
 	$(ERL) -make
